add x btn to the login and signup

--- a/app/assets/stylesheets/login_lightbox.css.scss
+++ b/app/assets/stylesheets/login_lightbox.css.scss
@@ -30,7 +30,7 @@
 
 
 #login_lightbox_login_text{
-  padding: 20px 0px;
+  padding: 0px 0px 15px 0px;
   text-decoration: none;
   text-align: center;
   font-size: 28px;
