Add styles, text, and images.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -145,6 +145,9 @@ footer ul li {
 .capitalize{
     text-transform: capitalize;
 }
+.uppercase{
+    text-transform: uppercase;
+}
 .light_font{
    font-weight:300;
 }
