--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,6 +1,5 @@
 <% provide(:title, 'About Us') %>
-<div>
-  <img src="<%= cl_image_path('bongo.png') %>">
+<div class="test"></div>
 <div class="about-us-margin">
     <h2 class="about-us-header">OUR PRODUCT</h2>
     <p>
@@ -337,8 +336,5 @@
                 </div>
             </div> <!-- ROW -->
         </div> <!-- ABOUT US BLUE -->
-
-
-
     </div> <!-- 2nd ABOUT US MARGIN -->
 </div> <!-- 1st ABOUT US MARGIN -->
