--- a/app/assets/stylesheets/about.css.scss
+++ b/app/assets/stylesheets/about.css.scss
@@ -1,3 +1,15 @@
+.test {
+  max-height: 100px;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: url(http://res.cloudinary.com/hpdnx5ayv/image/upload/v1384727906/bongo.png) no-repeat center center fixed;
+  -webkit-background-size: cover;
+     -moz-background-size: cover;
+       -o-background-size: cover;
+          background-size: cover;
+}
+
 .about-us-header {
   font-family: "Open Sans";
   font-weight: 200;
