--- a/app/assets/stylesheets/about.css.scss
+++ b/app/assets/stylesheets/about.css.scss
@@ -1,13 +1,19 @@
-.test {
-  max-height: 100px;
+.about-us-main-picture {
+  max-height: 650px;
   position: fixed;
   width: 100%;
   height: 100%;
-  background: url(http://res.cloudinary.com/hpdnx5ayv/image/upload/v1384727906/bongo.png) no-repeat center center fixed;
+  background-image: url(http://res.cloudinary.com/hpdnx5ayv/image/upload/v1384971206/help-test.jpg);
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
   -webkit-background-size: cover;
      -moz-background-size: cover;
        -o-background-size: cover;
           background-size: cover;
+}
+
+.about-us-navbar-inner {
+  min-height: 44px;
 }
 
 .about-us-header {
@@ -17,7 +23,7 @@
 }
 
 .about-us-margin {
-  margin: 50px;
+  margin: 0;
 }
 
 .about-us-blue {
