fix header public

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer class="footer">
   <small>
-    <ul>
+    <ul >
       <li><%= link_to 'About Us',about_path %> </li>
       <li><%= link_to 'Blog', "http://blog.mywebroom.com" %></li>
       <li><%= link_to 'Shop',shop_index_path %> </li>
@@ -8,9 +8,11 @@
       <li><a href="javascript:feedback_lightbox();">Send Feedback!</a></li>
     </ul>
 
+
+
   </small>
-  <nav>
-    <span>&copy; Copyright 2014 Rooms Inc. All Rights Reserved</span>
+  <nav class="nav pull-right">
+    <span>&copy; 2014 Rooms Inc.</span>
   </nav>
 </footer>
 
