--- a/app/views/static_pages/landing.html.erb
+++ b/app/views/static_pages/landing.html.erb
@@ -25,13 +25,13 @@ body{
   z-index:1;
 
   /*Gradient*/
-  background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%); /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,1)), color-stop(100%,rgba(255,255,255,0))); /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%); /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%); /* Opera 11.10+ */
-  background: -ms-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%); /* IE10+ */
-  background: linear-gradient(to bottom, rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%); /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#00ffffff',GradientType=0 ); /* IE6-9 */
+  background: -moz-linear-gradient(top, rgba(255,255,255,0.8) 0%, rgba(255,255,255,0) 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,0.8)), color-stop(100%,rgba(255,255,255,0))); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, rgba(255,255,255,0.8) 0%,rgba(255,255,255,0) 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top, rgba(255,255,255,0.8) 0%,rgba(255,255,255,0) 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top, rgba(255,255,255,0.8) 0%,rgba(255,255,255,0) 100%); /* IE10+ */
+  background: linear-gradient(to bottom, rgba(255,255,255,0.8) 0%,rgba(255,255,255,0) 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ccffffff', endColorstr='#00ffffff',GradientType=0 ); /* IE6-9 */
 }
 #landing_logo{
   position:fixed;
@@ -47,7 +47,7 @@ body{
 .landing_slide_content{
   width:900px;
   height:480px;
-  padding-top:50px;
+  padding-top:20px;
   position:absolute;
   top:50%;
   left:50%;
@@ -85,7 +85,7 @@ body{
 .landing_get_started{
   width:450px;
   font-size: 30px;
-  margin:auto;
+  margin:10px auto;
   padding:25px 0;
   position:relative;
 }
@@ -135,6 +135,21 @@ li.landing_login{
   border-radius: 0;
   opacity:1;
 }
+.landing_play_video{
+  width:50px;
+  height:50px;
+  position:relative;
+  background-image:url('http://res.cloudinary.com/hpdnx5ayv/image/upload/v1384978096/play-button-default.png');
+  background-position:center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  margin:10px auto;
+  padding-top:10px;
+}
+.landing_play_video:hover{
+  background-image:url('http://res.cloudinary.com/hpdnx5ayv/image/upload/v1384976417/play-button.png');
+
+}
 /* keep full widget on smaller screens */
 @media (max-width: 767px) { 
   body {
@@ -172,11 +187,14 @@ li.landing_login{
         <div class="container">
           <div class="landing_slide_content">
             <p class="landing_text_1"> Your place to</p>
-            <p class="landing_text_2" >EXPRESS</p><br>
+            <p class="landing_text_2" >EXPRESS</p>
             <p class="landing_text_3 uppercase">Style &nbsp;  &#183; &nbsp;  Personality &nbsp;  &#183; &nbsp;  Interests</p><br>
             <div class="blue_button landing_get_started">
               <span>GET STARTED</span>
               <a href="/xroom"> <span class="link_spanner"></span></a>
+            </div>
+            <div class="landing_play_video">
+              <a href="#"><span class="link_spanner"><span></a>
             </div>
           </div>
         </div>
@@ -189,11 +207,15 @@ li.landing_login{
 
           <div class="landing_slide_content">
             <p class="landing_text_1"> Your place to</p>
-            <p class="landing_text_2" >ORGANIZE</p><br>
+            <p class="landing_text_2" >ORGANIZE</p>
             <p class="landing_text_3 uppercase">Bookmarks &nbsp;  &#183; &nbsp;  Ideas &nbsp;  &#183; &nbsp;  Activities</p><br>
             <div class="blue_button landing_get_started">
               <span>GET STARTED</span>
               <a href="/xroom"> <span class="link_spanner"></span></a>
+            </div>
+
+            <div class="landing_play_video">
+              <a href="#"><span class="link_spanner"><span></a>
             </div>
           </div>
           
@@ -202,17 +224,22 @@ li.landing_login{
     </div>
     <!-- 3-->
     <div class="item">
-      <div class="fill" style="background-image:url('http://res.cloudinary.com/hpdnx5ayv/image/upload/v1384908277/landing-page-paris.jpg');">
+      <div class="fill" style="background-image:url('http://res.cloudinary.com/hpdnx5ayv/image/upload/v1384975885/landing-page-paris-blur-center.jpg');">
         <div class="container">
           
           <div class="landing_slide_content">
             <p class="landing_text_1"> Your place to</p>
-            <p class="landing_text_2" >DISCOVER</p><br>
+            <p class="landing_text_2" >DISCOVER</p>
             <p class="landing_text_3 uppercase">Trends &nbsp;  &#183; &nbsp;  Sites &nbsp;  &#183; &nbsp;  Stores</p><br>
             <div class="blue_button landing_get_started">
               <span>GET STARTED</span>
               <a href="/xroom"> <span class="link_spanner"></span></a>
             </div>
+            <div class="landing_play_video">
+              <a href="#"><span class="link_spanner"><span></a>
+            </div>
+
+
           </div>
           
         </div>
@@ -220,16 +247,19 @@ li.landing_login{
     </div>
     <!-- 4-->
     <div class="item">
-      <div class="fill" style="background-image:url('http://res.cloudinary.com/hpdnx5ayv/image/upload/v1384908296/landing-page-urban.jpg');">
+      <div class="fill" style="background-image:url('http://res.cloudinary.com/hpdnx5ayv/image/upload/v1384975868/landing-page-urban-blur-center.jpg');">
         <div class="container">
           
           <div class="landing_slide_content">
             <p class="landing_text_1"> Your place to</p>
-            <p class="landing_text_2" >SHARE</p><br>
+            <p class="landing_text_2" >SHARE</p>
             <p class="landing_text_3 uppercase">Products &nbsp;  &#183; &nbsp;  Contents &nbsp;  &#183; &nbsp;  Designs</p><br>
             <div class="blue_button landing_get_started">
               <span>GET STARTED</span>
               <a href="/xroom"> <span class="link_spanner"></span></a>
+            </div>
+            <div class="landing_play_video">
+              <a href="#"><span class="link_spanner"><span></a>
             </div>
           </div>
           
@@ -243,12 +273,17 @@ li.landing_login{
           
           <div class="landing_slide_content">
             <p class="landing_text_1"> Your place to</p>
-            <p class="landing_text_2" >CREATE</p><br>
+            <p class="landing_text_2" >CREATE</p>
             <p class="landing_text_3 ">a home on the web</p><br>
+            
             <div class="blue_button landing_get_started">
               <span>GET STARTED</span>
               <a href="/xroom"> <span class="link_spanner"></span></a>
             </div>
+            
+            <div class="landing_play_video">
+              <a href="#"><span class="link_spanner"><span></a>
+            </div>          
           </div>
           
         </div>
