Style changes. box shadow on buttons

--- a/app/views/static_pages/landing.html.erb
+++ b/app/views/static_pages/landing.html.erb
@@ -124,6 +124,11 @@ body{
 li.landing_login{
   padding:0;
 }
+.landing_header #login_btn,.landing_header #signup_btn{
+  -webkit-box-shadow: 2px 2px 3px rgba(112,112,112,0.15);
+  -moz-box-shadow: 2px 2px 3px rgba(112,112,112,0..15);
+  box-shadow: 2px 2px 3px rgba(112,112,112,0.15);
+}
 .landing_header #signup_btn{
   margin:0;
 }
