--- a/app/views/static_pages/landing.html.erb
+++ b/app/views/static_pages/landing.html.erb
@@ -306,6 +306,6 @@ li.landing_login{
 </div>
 
   <script type="text/javascript">
-  $('.container').addClass("fill landing_page_view")
-  // $('.carousel').carousel()
+  $('body > .container').addClass("fill landing_page_view")
+  $('.carousel').carousel()
   </script>
