Add media query for menu to move when screen is small

--- a/app/views/static_pages/landing.html.erb
+++ b/app/views/static_pages/landing.html.erb
@@ -161,6 +161,12 @@ li.landing_login{
     padding-left: 0;
     padding-right: 0;
   }
+
+  .landing_header{
+    top: 80px;
+    left: 15px;
+    right: auto;
+  }
 }
 </style>
 <div id="toolbar_overlay">
