Add more media queries

--- a/app/views/static_pages/landing.html.erb
+++ b/app/views/static_pages/landing.html.erb
@@ -167,6 +167,19 @@ li.landing_login{
     left: 15px;
     right: auto;
   }
+  .landing_text_1{
+  font-size:30px;
+  }
+  .landing_text_2{
+    
+    font-size:70px;
+  }
+  .landing_text_3{
+    font-size:19px;
+    font-weight:400;
+    text-shadow: 2px 2px 4px rgba(0,0,0,.8);
+    
+  }
 }
 </style>
 <div id="toolbar_overlay">
