--- a/app/assets/stylesheets/about.css.scss
+++ b/app/assets/stylesheets/about.css.scss
@@ -1,8 +1,20 @@
-.about-us-main-picture {
-  max-height: 650px;
-  position: fixed;
+/*
+(1) HEADER
+*/
+
+/*
+(2) TOP IMAGE
+*/
+.about-top-image-wrap {
+  position: absolute;
+  top: 50px;
+  left: 0;
   width: 100%;
-  height: 100%;
+  height: 300px;
+}
+.about-top-image {
+  width: 100%;
+  height: 300px;
   background-image: url(http://res.cloudinary.com/hpdnx5ayv/image/upload/v1384971206/help-test.jpg);
   background-position: 50% 50%;
   background-repeat: no-repeat;
@@ -11,47 +23,18 @@
        -o-background-size: cover;
           background-size: cover;
 }
+/*
+(3) OUR PRODUCT
+*/
 
-.about-us-navbar-inner {
-  min-height: 44px;
-}
+/*
+(4) ABOUT US
+*/
 
-.about-us-header {
-  font-family: "Open Sans";
-  font-weight: 200;
-  font-style: normal;
-}
-
-.about-us-margin {
-  margin: 0;
-}
-
-.about-us-blue {
-  background-color: #00ccff;
-}
-
-.about-us-grey {
-  background-color: #dcdcdc;
-}
-
-.about-us-blue-border {
-  border-color: #00ccff;
-  border: 3px;
-}
-
-.about-us-white-text {
-  color: white;
-}
-
-.about-us-blue-picture {
-  padding-top: 30px;
-}
-
-.picture-padding {
-  padding: 20px;
-}
-
-.about-us-picture {
+/*
+(5) ROOMS TEAM
+*/
+.about-team-picture {
   border: none;
   -webkit-border-radius: none;
           border-radius: none;
@@ -59,8 +42,122 @@
   -webkit-box-shadow: none;
      -moz-box-shadow: none;
 }
+/*
+(6) JOIN THE TEAM
+*/
 
-.partner-padding {
-  padding-top: 10px;
-  padding-bottom: 10px;
+/*
+(7) PARTNERS
+*/
+
+/*
+(8) FEEDBACK
+*/
+
+/*
+(9) PRESS
+*/
+
+/*
+(10) CONTACT US
+*/
+
+/*
+(11) SIGN UP
+*/
+.about-background-black {
+  background-color: black;
+  height: 100px;
+}
+#about-signup-button {
+  font-family: "Open Sans";
+  font-weight: normal;
+  font-size: 18px;
+  text-align: center;
+  padding: 16px 180px;
+  margin: 5px 5px;
+  background-color:  #00ccff;
+  color: #ffffff;
+  text-decoration: none;
+  border: none;
+}
+#about-signup-button:hover {
+  color: #ffffff;
+  text-decoration: none;
+}
+
+
+
+/*
+--- GENERAL---
+*/
+
+/*
+TEXT FONT / COLOR
+*/
+.about-heading-black {
+  font-family: "Open Sans";
+  font-weight: 200;
+  font-style: normal;
+  color: black;
+}
+.about-heading-white {
+  font-family: "Open Sans";
+  font-weight: 200;
+  font-style: normal;
+  color: white;
+}
+.about-text-black {
+  font-family: "Open Sans";
+  font-weight: 200;
+  font-style: normal;
+  color: black;
+}
+.about-text-white {
+  font-family: "Open Sans";
+  font-weight: 200;
+  font-style: normal;
+  color: white;
+}
+.about-text-blue {
+  font-family: "Open Sans";
+  font-weight: 200;
+  font-style: normal;
+  color: #00ccff;
+}
+/*
+BACKGROUND COLOR
+*/
+.about-background-blue {
+  background-color: #00ccff;
+}
+
+.about-background-grey {
+  background-color: #f3f3f3;
+}
+/*
+LARGE ROUND PICTURES
+*/
+.about-large-round-picture {
+  padding-top: 30px;
+  padding-bottom: 60px;
+}
+/*
+RECTANGLE PADDING
+*/
+.about-rectangle-padding {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+/*
+TEXT ABOUT RECTANGLE PADDING
+*/
+.about-text-above-rectangle-padding {
+  padding-left: 20px;
+}
+/*
+MARGIN
+*/
+.about-margin {
+  margin: 60px;
 }
