--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <header class="navbar navbar-fixed-top navbar-inverse" >
   <div class="navbar-inner" >
-    <div class="container">
+    <div class=<%= "container" unless @skip_container %>>
 
       <% @static_content = StaticContent.find_by_name("mywebroom-logo")  %>
       <% if signed_in? %>
