--- a/app/assets/stylesheets/rooms_bookmarks.css.scss
+++ b/app/assets/stylesheets/rooms_bookmarks.css.scss
@@ -225,8 +225,8 @@ div.just_added img{
 /*Bookmarks Preview Mode*/
 .preview_mode_wrap{
   position:fixed;
-  left:250px;
-  width:84%;
+  left:20%;
+  width:80%;
   height:100%;
   background-color: #404040;
   z-index:2;
