--- a/app/views/users_mailer/forget_password_email.text.erb
+++ b/app/views/users_mailer/forget_password_email.text.erb
@@ -1,5 +1,10 @@
-To reset your password click the URL below.
+<% if @user_profile.firstname.blank? %>
+  Hey <%= @user.username %>,
+<% else %>
+ Hey <%= @user_profile.firstname %>,
+<%end%>
 
-<%= edit_password_reset_url(@user.password_reset_token) %>
+Forgot your password? No problem. Just click <%= edit_password_reset_url(@user.password_reset_token) %> to reset it. Have questions or need help? You can reach us at info@mywebroom.com.
 
-If you did not request your password to be reset please ignore this email and your password will stay as it is.
+Thanks for using myWebRoom!
+The Rooms Team
