--- a/app/views/users_mailer/friend_request_email.html.erb
+++ b/app/views/users_mailer/friend_request_email.html.erb
@@ -353,7 +353,7 @@ background-color: #00ccff; border: none; color: white; font-weight: normal; font
                   <table class="container message_header_container" style="border-spacing: 0; border-collapse: collapse; vertical-align: top; text-align: inherit; width: 580px; margin: 0 10%; padding: 0;"><tr style="vertical-align: top; text-align: left; padding: 0;" align="left"><td class="wrapper last" style="word-break: break-word; -webkit-hyphens: auto; -moz-hyphens: auto; hyphens: auto; border-collapse: collapse !important; vertical-align: top; text-align: left; position: relative; padding: 10px 0px 0px;" align="left" valign="top">
             
                         
-                        <img src="http://res.cloudinary.com/hpdnx5ayv/image/upload/v1384472579/16728-static_content-mywebroom-logo-with-slogan-email-image_name-logo-with-slogan.png" style="outline: none; text-decoration: none; -ms-interpolation-mode: bicubic; width: auto; max-width: 100%; float: left; clear: both; display: block;" align="left" /></td>
+                        <img src="http://res.cloudinary.com/hpdnx5ayv/image/upload/v1384904370/mywebroomlogo365x64.png" style="outline: none; text-decoration: none; -ms-interpolation-mode: bicubic; width: auto; max-width: 100%; float: left; clear: both; display: block;" align="left" /></td>
                                 
                     </tr></table></td>
               </tr></table><center style="width: 100%; min-width: 580px;">
@@ -364,7 +364,7 @@ background-color: #00ccff; border: none; color: white; font-weight: normal; font
                       <table class="twelve columns" style="border-spacing: 0; border-collapse: collapse; vertical-align: top; text-align: left; width: 580px; margin: 0 auto; padding: 0;"><tr style="vertical-align: top; text-align: left; padding: 0;" align="left"><td style="word-break: break-word; -webkit-hyphens: auto; -moz-hyphens: auto; hyphens: auto; border-collapse: collapse !important; vertical-align: top; text-align: left; padding: 0px 0px 10px;" align="left" valign="top">
                             <table class="container message_content" style="border-spacing: 0; border-collapse: collapse; vertical-align: top; text-align: inherit; width: 580px; margin: 10px auto 0; padding: 0; border: 1px solid #d2d2d2;"><tr style="vertical-align: top; text-align: left; padding: 0;" align="left"><td class="twelve subcolumns text-pad message_content_header" style="word-break: break-word; -webkit-hyphens: auto; -moz-hyphens: auto; hyphens: auto; border-collapse: collapse !important; vertical-align: top; text-align: left; width: 100% !important; padding: 0px 10px 20px;" align="left" valign="top">
                                   <h4 style="color: #0073a5; display: block; font-family: 'Open Sans','Helvetica', 'Arial', sans-serif; font-weight: lighter; text-align: center; line-height: 1.3; word-break: normal; font-size: 28px; border-bottom-color: #d2d2d2; border-bottom-width: 1px; border-bottom-style: solid; margin: 0; padding: 15px;" align="center">
-                                    <% if @user_profile.firstname.blank? %>\
+                                    <% if @user_profile.firstname.blank? %>
                                       <%= @user.username %>  wants a key to your WebRoom!
                                     <% else %>
                                         <%= @user_profile.firstname %>  wants a key to your WebRoom!
@@ -387,7 +387,7 @@ background-color: #00ccff; border: none; color: white; font-weight: normal; font
                                               <%= cl_image_path @user_photo.image_name,width:150 , height:150,:crop => :fill,:default_image => "default-user.png" %>
                                             <% end %>" style="outline: none; text-decoration: none; -ms-interpolation-mode: bicubic; width: auto; max-width: 100%; float: none; clear: both; display: inline;" align="none" /><br />
                                             <span class="center" style="display: block; width: 100%; text-align: center; margin-top: 10px;">
-                                              <% if @user_profile.firstname.blank? %>\
+                                              <% if @user_profile.firstname.blank? %>
                                                 <%= @user.username %>  
                                               <% else %>
                                                 <%= @user_profile.firstname %> 
@@ -400,7 +400,7 @@ background-color: #00ccff; border: none; color: white; font-weight: normal; font
 
                                       <table class="seven columns" style="border-spacing: 0; border-collapse: collapse; vertical-align: top; text-align: left; width: 330px; margin: 0 auto; padding: 0;"><tr style="vertical-align: top; text-align: left; padding: 0;" align="left"><td class="text-pad message_content_message" style="word-break: break-word; -webkit-hyphens: auto; -moz-hyphens: auto; hyphens: auto; border-collapse: collapse !important; vertical-align: top; text-align: left; padding: 0px 10px 30px;" align="left" valign="top">
                                               <br /><p class="lead" style="color: #222222; display: block; font-family: 'Open Sans','Helvetica', 'Arial', sans-serif; font-weight: normal; text-align: left; line-height: 19px; font-size: 14px; margin: 0; padding: 0 30px;" align="left"><span style="font-weight: bolder; margin-top: 10px;">
-                                              <% if @user_profile.firstname.blank? %>\
+                                              <% if @user_profile.firstname.blank? %>
                                                 Hi <%= @user_requested.username %>,
                                               <% else %>
                                                 Hi <%= @user_requested_profile.firstname %> ,
@@ -434,7 +434,7 @@ background-color: #00ccff; border: none; color: white; font-weight: normal; font
                       
                 <table class="twelve columns message_footer_content" style="border-spacing: 0; border-collapse: collapse; vertical-align: top; text-align: left; width: 580px; margin: 0 10%; padding: 0;"><tr style="vertical-align: top; text-align: left; padding: 0;" align="left"><td class="left-text-pad" style="word-break: break-word; -webkit-hyphens: auto; -moz-hyphens: auto; hyphens: auto; border-collapse: collapse !important; vertical-align: top; text-align: left; padding: 0px 0px 10px 10px;" align="left" valign="top">
 
-                      <p style="color: #222222; display: block; font-family: 'Open Sans','Helvetica', 'Arial', sans-serif; font-weight: normal; text-align: left; line-height: 19px; font-size: 12px; margin: 0; padding: 10px 0;" align="left"><% if @user_profile.firstname.blank? %>\
+                      <p style="color: #222222; display: block; font-family: 'Open Sans','Helvetica', 'Arial', sans-serif; font-weight: normal; text-align: left; line-height: 19px; font-size: 12px; margin: 0; padding: 10px 0;" align="left"><% if @user_profile.firstname.blank? %>
                                                This email is for myWebRoom.com resident <%= @user_requested.username %>
                                               <% else %>
                                                This email is for myWebRoom.com resident <%= @user_requested_profile.firstname %> 
