Begin Welcome Email
add url to text version of key request.
add placekitten to basic doc template

--- a/app/views/users_mailer/friend_request_email.text.erb
+++ b/app/views/users_mailer/friend_request_email.text.erb
@@ -24,4 +24,4 @@ I'd like to check out your online room! Please accept my Key Request.
 
 ______________________________________________________
 
-Give Key: <%=room_rooms_url(@user_requested.username,came_from:@came_from_email_request_key)%>
+Give Key: <%=room_rooms_url(@user_requested.username)%>
