sprite header p1 and shop page title

--- a/app/views/rooms/room.html.erb
+++ b/app/views/rooms/room.html.erb
@@ -1,3 +1,12 @@
+<% provide(:title, 'My Room') %>
+
+<% content_for :head do %>
+    <!-- your tags -->
+    <meta name="description" content="This is your virtual home to discover new content, organize your bookmarks and uniquely design.">
+<% end %>
+
+
+
 
  <div id="xroom_main_container">
 
