--- a/app/views/rooms/xroom.html.erb
+++ b/app/views/rooms/xroom.html.erb
@@ -1,6 +1,8 @@
+<% provide(:title, 'Select a room design') %>
+
 <% content_for :head do %>
     <!-- your tags -->
-    <meta name="description" content="This is my web room ">
+    <meta name="description" content="Select a room you would like to use to start discovering the web from.">
 <% end %>
 
 
