--- a/app/views/shop/index_entire_rooms.html.erb
+++ b/app/views/shop/index_entire_rooms.html.erb
@@ -1,3 +1,10 @@
+<% provide(:title, 'Browse Rooms') %>
+
+<% content_for :head do %>
+    <!-- your tags -->
+    <meta name="description" content="Browse entire room designs and get inspired.">
+<% end %>
+
 <div class="shop_container">
   <%= render 'shop_nav' %>
   <div class="shop_filter">
