--- a/app/views/shop/show_bookmark.html.erb
+++ b/app/views/shop/show_bookmark.html.erb
@@ -1,3 +1,11 @@
+<% provide(:title, 'Add this bookmark to your room') %>
+
+<% content_for :head do %>
+    <!-- your tags -->
+    <meta name="description" content="Add these bookmarks to your webroom interface adn discover even more content.">
+<% end %>
+
+
 <div class="shop_container">
   <%= render 'shop_nav' %>
 
