--- a/app/views/shop/show_bundle.html.erb
+++ b/app/views/shop/show_bundle.html.erb
@@ -1,3 +1,12 @@
+<% provide(:title, 'Try this bundle in your room') %>
+
+<% content_for :head do %>
+    <!-- your tags -->
+    <meta name="description" content="Select this bundle of items for your webroom">
+<% end %>
+
+
+
 <div class="shop_container">
   <%= render 'shop_nav' %>
 
