--- a/app/views/shop/show_item.html.erb
+++ b/app/views/shop/show_item.html.erb
@@ -1,3 +1,10 @@
+<% provide(:title, 'Shop for Products') %>
+
+<% content_for :head do %>
+    <!-- your tags -->
+    <meta name="description" content="Discover and shop for clothing, furniture, decor, electronics, gifts, vacations and keep up with the trends!">
+<% end %>
+
 
 <div class="shop_container">
   <%= render 'shop_nav' %>
