--- a/app/views/shop/show_items_design.html.erb
+++ b/app/views/shop/show_items_design.html.erb
@@ -1,3 +1,11 @@
+<% provide(:title, 'Try this product in your room') %>
+
+<% content_for :head do %>
+    <!-- your tags -->
+    <meta name="description" content="You can buy this product or try it for free in your room.">
+<% end %>
+
+
 <div class="shop_container">
   <%= render 'shop_nav' %>
 
