--- a/app/views/shop/show_theme.html.erb
+++ b/app/views/shop/show_theme.html.erb
@@ -1,3 +1,11 @@
+<% provide(:title, 'Try this theme in your room') %>
+
+<% content_for :head do %>
+    <!-- your tags -->
+    <meta name="description" content="You can try this theme design in your webroom">
+<% end %>
+
+
 <div class="shop_container">
   <%= render 'shop_nav' %>
 
