--- a/app/assets/stylesheets/rooms_room_header.css.scss
+++ b/app/assets/stylesheets/rooms_room_header.css.scss
@@ -15,18 +15,42 @@
 
 #xroom_header_profile {
 
+  //background-position: center;
+  //background-repeat: no-repeat;
+  //width: 23px;
+  //height: 21px;
+  //background-image: url('http://res.cloudinary.com/hpdnx5ayv/image/upload/v1377125493/social.gif');
+}
+#xroom_header_profile:hover{
+
+  //width: 23px;
+  //height: 21px;
+  //background-image: url('http://res.cloudinary.com/hpdnx5ayv/image/upload/v1377125506/social-hover.gif');
+
+}
+
+
+.xroom_header_profile_img {
+
   background-position: center;
   background-repeat: no-repeat;
   width: 23px;
   height: 21px;
-  background-image: url('http://res.cloudinary.com/hpdnx5ayv/image/upload/v1377125493/social.gif');
+  //background: url('http://res.cloudinary.com/hpdnx5ayv/image/upload/v1383693624/32569-static_content-toolbar-icons-image_name-toolbar-icons.png');
+  background-position: -57px 4px;
 }
 
-#xroom_header_profile:hover{
 
+
+.xroom_header_profile_img_hover{
+
+
+  background-repeat: no-repeat;
   width: 23px;
   height: 21px;
-  background-image: url('http://res.cloudinary.com/hpdnx5ayv/image/upload/v1377125506/social-hover.gif');
+  //background-image: url('http://res.cloudinary.com/hpdnx5ayv/image/upload/v1383693624/32569-static_content-toolbar-icons-image_name-toolbar-icons.png');
+  background-position: -57px -36px;
+
 
 }
 
