--- a/app/views/shop/index.html.erb
+++ b/app/views/shop/index.html.erb
@@ -1,3 +1,11 @@
+<% provide(:title, 'Shop for the trendiest items online') %>
+
+<% content_for :head do %>
+    <!-- your tags -->
+    <meta name="description" content="Discover and shop for clothing, furniture, decor, electronics, gifts, vacations and keep up with the trends!">
+<% end %>
+
+
 <div class="shop_container">
   <%= render 'shop_nav' %>
   <div class="shop_table">
