--- a/app/views/shop/index_bookmarks.html.erb
+++ b/app/views/shop/index_bookmarks.html.erb
@@ -1,3 +1,10 @@
+<% provide(:title, 'Discover bookmarks to add') %>
+
+<% content_for :head do %>
+    <!-- your tags -->
+    <meta name="description" content="Discover new websites, apps and content everyday.">
+<% end %>
+
 <div class="shop_container">
   <%= render 'shop_nav' %>
     <div class="shop_table">
