--- a/app/views/shop/index_bundles.html.erb
+++ b/app/views/shop/index_bundles.html.erb
@@ -1,3 +1,11 @@
+<% provide(:title, 'Select Bundles ') %>
+
+<% content_for :head do %>
+    <!-- your tags -->
+    <meta name="description" content="Select furniture sets, to add into your room.">
+<% end %>
+
+
 <div class="shop_container">
   <%= render 'shop_nav' %>
   <div class="shop_filter">
