--- a/app/views/shop/index_themes.html.erb
+++ b/app/views/shop/index_themes.html.erb
@@ -1,3 +1,11 @@
+<% provide(:title, 'Check out Themes') %>
+
+<% content_for :head do %>
+    <!-- your tags -->
+    <meta name="description" content="Check out all the different themes designed by artists world travellers">
+<% end %>
+
+
 <div class="shop_container">
   <%= render 'shop_nav' %>
   <div class="shop_filter">
