--- a/app/views/shop/show_entire_room.html.erb
+++ b/app/views/shop/show_entire_room.html.erb
@@ -1,3 +1,12 @@
+<% provide(:title, 'Try this room design in your room') %>
+
+<% content_for :head do %>
+    <!-- your tags -->
+    <meta name="description" content="Choose a new look for your webroom profile.">
+<% end %>
+
+
+
 <div class="shop_container">
   <%= render 'shop_nav' %>
 
