--- a/app/assets/stylesheets/rooms_room_header.css.scss
+++ b/app/assets/stylesheets/rooms_room_header.css.scss
@@ -1,78 +1,87 @@
-#xroom_header_active_sites{
-  background-position: center;
+
+.xroom_header_active_sites_img{
   background-repeat: no-repeat;
   width: 23px;
   height: 21px;
-}
-#xroom_header_active_sites {
-  background-image: url('http://res.cloudinary.com/hpdnx5ayv/image/upload/c_fit,h_21,w_23/v1379697970/browse-mode-active.png');
-  width:auto;
-
-}
-#xroom_header_active_sites:hover{
-  background-image: url('http://res.cloudinary.com/hpdnx5ayv/image/upload/c_fit,h_21,w_23/v1379697987/browse-mode-active-highlight.png');
+  background-position: 0px 2px;
 }
 
-#xroom_header_profile {
-
-  //background-position: center;
-  //background-repeat: no-repeat;
-  //width: 23px;
-  //height: 21px;
-  //background-image: url('http://res.cloudinary.com/hpdnx5ayv/image/upload/v1377125493/social.gif');
-}
-#xroom_header_profile:hover{
-
-  //width: 23px;
-  //height: 21px;
-  //background-image: url('http://res.cloudinary.com/hpdnx5ayv/image/upload/v1377125506/social-hover.gif');
-
+.xroom_header_active_sites_img_hover{
+  background-repeat: no-repeat;
+  width: 23px;
+  height: 21px;
+  background-position: 0px -36px;
 }
 
 
 .xroom_header_profile_img {
-
   background-position: center;
   background-repeat: no-repeat;
   width: 23px;
   height: 21px;
-  //background: url('http://res.cloudinary.com/hpdnx5ayv/image/upload/v1383693624/32569-static_content-toolbar-icons-image_name-toolbar-icons.png');
   background-position: -57px 4px;
 }
 
 
 
 .xroom_header_profile_img_hover{
-
-
   background-repeat: no-repeat;
   width: 23px;
   height: 21px;
-  //background-image: url('http://res.cloudinary.com/hpdnx5ayv/image/upload/v1383693624/32569-static_content-toolbar-icons-image_name-toolbar-icons.png');
   background-position: -57px -36px;
 
-
 }
 
-#xroom_header_storepage{
+
+.xroom_header_storepage_img{
   background-position: left;
   background-repeat: no-repeat;
-  width: 23px;
+  width: 21px;
   height: 21px;
-  background-image: url('http://res.cloudinary.com/hpdnx5ayv/image/upload/v1377125793/store-icon.gif');
+  //background-image: url('http://res.cloudinary.com/hpdnx5ayv/image/upload/v1383693624/32569-static_content-toolbar-icons-image_name-toolbar-icons.png');
+  background-position: -122px 4px;
+  margin-right: 30px;
 
 }
 
-#xroom_header_storepage:hover{
-  width: 23px;
+.xroom_header_storepage_img_hover{
+
+  background-repeat: no-repeat;
+  width: 21px;
   height: 21px;
-  background-image: url('http://res.cloudinary.com/hpdnx5ayv/image/upload/v1377125806/store-icon-hover.gif');
+  background-position: -122px -36px;
+  margin-right: 30px;
+  //background-image: url('http://res.cloudinary.com/hpdnx5ayv/image/upload/v1383693624/32569-static_content-toolbar-icons-image_name-toolbar-icons.png');
+}
+
+#xroom_header_logo img{
+ width: 132px;
+ margin-top: 6px;
+}
+
+.xroom_header_user_room{
+  background-color: #333333;
+  padding-bottom: 10px;
 
 }
+#xroom_header_myroom{
+  background-color: #333333;
+  padding-bottom: 17px;
+  color: #ffffff;
+}
+
 
 #xroom_header_myroom img{
   width: 23px;
   height: 23px;
+
+}
+
+
+
+#xroom_header_caret{
+  border-top-color: #ffffff;
+  border-bottom-color: #ffffff;
 }
 
 #xroom_header_search {
