adds meta-data to about us page

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,6 +1,15 @@
 <% provide(:title, 'About Us') %>
 
 
+<!-- META DATA -->
+<% content_for :head do %>
+    <!-- your tags -->
+    <meta name="description" content="What is mywebroom, and the team working on this cool project. Product, Team, Partners, Feedback, About, Press, Contact.">
+<% end %>
+
+
+
+
 <!-- (1) HEADER -->
 
 
