Adds meta-data to help page

--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,4 +1,13 @@
-<% provide(:title, 'Help') %>
+<% provide(:title, 'How to use your web room') %>
+
+
+<!-- META DATA -->
+<% content_for :head do %>
+    <!-- your tags -->
+    <meta name="description" content="Learn how to use your webroom. Every unique featire explained on this page!">
+<% end %>
+
+
 
 
 <div class="container">
